issue-192: got to the point where tests require jms
Got to the point to when the tests require JMS queues.  Have not yet
found a way to get these queues provisioned on test startup.  Might need
to switch to a different method of starting and configuration JBoss.